--- a/ProsperAPIWrapper/ProsperAPIWrapper.csproj
+++ b/ProsperAPIWrapper/ProsperAPIWrapper.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
